--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -11,7 +11,7 @@
             android:layout_height="wrap_content" android:id="@+id/lyBackground"
             android:background="@drawable/background_layout" android:elevation="2dp"
             android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp">
+            android:layout_marginBottom="5dp" android:gravity="center_vertical">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="4dp"
@@ -19,25 +19,26 @@
                 android:layout_marginBottom="10dp" android:layout_marginRight="3dp"/>
         <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="270dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="3pt">
             <TextView
                     android:text="@string/titulo"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/tvTitulo" android:textSize="21sp"
-                    android:textColor="@android:color/black"/>
+                    android:layout_height="wrap_content" android:id="@+id/tvTitulo" android:textSize="22dp"
+                    android:textColor="#636363" android:maxWidth="280dp" android:textStyle="normal"/>
             <TextView
                     android:text="@string/descripcion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/tvDescripcion"
                     android:layout_marginTop="5dp" android:layout_marginBottom="10dp" android:paddingLeft="10dp"
-            />
+                    android:maxWidth="280dp"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" android:gravity="center" android:id="@+id/lyFechaHora">
+                android:layout_height="wrap_content" android:gravity="right|center_vertical"
+                android:id="@+id/lyFechaHora">
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/tvFecha"
