--- a/app/src/main/res/layout/activity_gestion_categorias.xml
+++ b/app/src/main/res/layout/activity_gestion_categorias.xml
@@ -20,7 +20,7 @@
             android:id="@+id/etTitulo" android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             android:layout_marginStart="40dp"
-            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:hint="@string/nombre"
+            app:layout_constraintStart_toStartOf="parent" android:autofillHints="" android:hint="@string/titulo"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginEnd="40dp"/>
 
