--- a/app/src/main/res/layout/activity_gestion_categorias.xml
+++ b/app/src/main/res/layout/activity_gestion_categorias.xml
@@ -16,7 +16,7 @@
     <EditText
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             android:id="@+id/etTitulo" android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
             android:layout_marginStart="40dp"
