--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,6 +39,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/plus" app:fabSize="normal"/>
+            app:srcCompat="@drawable/plus" app:fabSize="normal" app:maxImageSize="35dp"/>
+    <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fbCateg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            app:srcCompat="@drawable/carpeta_mas" app:fabSize="mini" android:layout_marginBottom="90dp"
+            android:layout_marginEnd="24dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
