--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,15 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.miguelmartin.organizame.activities.MainActivity">
 
-    <item android:id="@+id/itemCategorias"
-          android:title="Categorías"
-          android:orderInCategory="100"
-          app:showAsAction="always|withText" android:icon="@drawable/carpeta_blanca"/>
+    <!--<item android:id="@+id/itemCategorias"-->
+          <!--android:title="Categorías"-->
+          <!--android:orderInCategory="100"-->
+          <!--app:showAsAction="always|withText" android:icon="@drawable/carpeta_blanca"/>-->
 
-    <item android:id="@+id/itemNuevaCategoria"
-          android:title="Categorías"
-          android:orderInCategory="100"
-          app:showAsAction="always|withText" android:icon="@drawable/carpeta"/>
+    <!--<item android:id="@+id/itemNuevaCategoria"-->
+          <!--android:title="Categorías"-->
+          <!--android:orderInCategory="100"-->
+          <!--app:showAsAction="always|withText" android:icon="@drawable/carpeta_mas"/>-->
     <item
             android:id="@+id/mSearch"
             android:icon="@drawable/lupa"
