--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#8e0000</color>
     <color name="colorAccent">#C62828</color>
     <color name="grisClaro">#f7f7f7</color>
-    <color name="colorArchivar">#008e17</color>
-    <color name="colorBorrar">#8e0000</color>
+    <color name="colorArchivar">#1B5E20</color>
+    <color name="colorBorrar">#B71C1C</color>
+    <color name="colorInbox">#01579B</color>
 </resources>
