--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
 
     <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar" android:layout_height="?attr/actionBarSize" android:layout_width="match_parent"/>
+            layout="@layout/toolbar"
+            app:layout_scrollFlags="snap"/>
 
     <LinearLayout
             android:orientation="vertical"
@@ -37,15 +38,39 @@
             android:id="@+id/fbAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/plus" app:fabSize="normal" app:maxImageSize="35dp"/>
+            android:layout_gravity="top"
+            android:src="@drawable/plus"
+            app:fabSize="normal"
+            app:maxImageSize="35dp"
+            app:layout_anchor="@id/bottomNavigationMenu"
+            app:layout_anchorGravity="top|end"
+            app:layout_behavior="com.miguelmartin.organizame.util.BottomNavigationFABBehavior"
+            android:cropToPadding="false" app:useCompatPadding="true"
+    />
+
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fbCateg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            app:srcCompat="@drawable/carpeta_mas" app:fabSize="mini" android:layout_marginBottom="90dp"
-            android:layout_marginEnd="24dp"/>
+            android:layout_gravity="top"
+            android:src="@drawable/carpeta_mas"
+            app:fabSize="mini"
+            app:layout_anchor="@id/fbAdd"
+            app:layout_anchorGravity="top|end"
+            app:useCompatPadding="false" android:cropToPadding="false" android:layout_marginRight="20dp"/>
+
+
+    <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottomNavigationMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="?android:attr/windowBackground"
+            app:menu="@menu/bottom_navigation_menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_behavior="com.miguelmartin.organizame.util.BottomNavigationBehavior"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+    />
+
 
 </android.support.design.widget.CoordinatorLayout>
