--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -7,7 +7,8 @@
         android:layout_height="wrap_content" android:id="@+id/lyBackground"
         android:background="@drawable/background_layout" android:elevation="2dp"
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp" android:gravity="right|center_vertical" android:padding="5dp">
+        android:layout_marginBottom="5dp" android:gravity="right|center_vertical" android:paddingRight="5dp"
+        android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingBottom="5dp">
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="4dp"
