--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,11 +3,11 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.miguelmartin.organizame.activities.MainActivity">
 
-    <item android:id="@+id/itemArchivados"
-    android:title="Archivados"
-    android:icon="@drawable/archivar"
-    android:orderInCategory="100"
-    app:showAsAction="always"/>
+    <!--<item android:id="@+id/itemArchivados"-->
+    <!--android:title="Archivados"-->
+    <!--android:icon="@drawable/archivar"-->
+    <!--android:orderInCategory="100"-->
+    <!--app:showAsAction="always"/>-->
 
     <item
             android:id="@+id/mSearch"
